--- a/src/services.html
+++ b/src/services.html
@@ -16,23 +16,23 @@
 
     <!-- Favicon and touch Icons -->
     <link
-      href="../assets/img/favicon.png"
+      href="./assets/img/favicon.png"
       rel="shortcut icon"
       type="image/png"
     />
-    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
     <link
-      href="../assets/img/apple-touch-icon-72x72.png"
+      href="./assets/img/apple-touch-icon-72x72.png"
       rel="apple-touch-icon"
       sizes="72x72"
     />
     <link
-      href="../assets/img/apple-touch-icon-114x114.png"
+      href="./assets/img/apple-touch-icon-114x114.png"
       rel="apple-touch-icon"
       sizes="114x114"
     />
     <link
-      href="../assets/img/apple-touch-icon-144x144.png"
+      href="./assets/img/apple-touch-icon-144x144.png"
       rel="apple-touch-icon"
       sizes="144x144"
     />
@@ -41,7 +41,30 @@
     <title>Oklahoma Race Photos | Event & Finish Line Photography OKC</title>
 
     <!-- Styles Include -->
-    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <!-- MailerLite Universal -->
+    <script>
+      (function (w, d, e, u, f, l, n) {
+        (w[f] =
+          w[f] ||
+          function () {
+            (w[f].q = w[f].q || []).push(arguments);
+          }),
+          (l = d.createElement(e)),
+          (l.async = 1),
+          (l.src = u),
+          (n = d.getElementsByTagName(e)[0]),
+          n.parentNode.insertBefore(l, n);
+      })(
+        window,
+        document,
+        "script",
+        "https://assets.mailerlite.com/js/universal.js",
+        "ml"
+      );
+      ml("account", "1528737");
+    </script>
+    <!-- End MailerLite Universal -->
   </head>
 
   <body class="theme-style--light theme-style--gradient">
@@ -57,11 +80,11 @@
             <!-- Left Part -->
             <div class="header_left_part d-flex align-items-center">
               <div class="logo">
-                <a href="index-4.html" class="light_logo"
-                  ><img src="../assets/img/orp-logo-type.png" alt="logo"
+                <a href="/" class="light_logo"
+                  ><img src="./assets/img/orp-logo-type.png" alt="logo"
                 /></a>
-                <a href="index-4.html" class="dark_logo"
-                  ><img src="../assets/img/orp-logo-type.png" alt="logo"
+                <a href="/" class="dark_logo"
+                  ><img src="./assets/img/orp-logo-type.png" alt="logo"
                 /></a>
               </div>
             </div>
@@ -71,7 +94,7 @@
               <div class="mainnav">
                 <ul class="main-menu">
                   <li class="menu-item">
-                    <a href="/index.html">Home</a>
+                    <a href="/">Home</a>
                   </li>
                   <li class="menu-item">
                     <a href="https://oklahomaracephotos.smugmug.com"
@@ -146,7 +169,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact-1.html">Oklahoma City, OKlahoma</a>
+              <a href="contact.html">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -191,10 +214,10 @@
 
       <div class="aside_logo logo">
         <a href="index.html" class="light_logo"
-          ><img src="../assets/img/dark-logo-square.svg" alt="logo"
+          ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
         <a href="index.html" class="dark_logo"
-          ><img src="../assets/img/dark-logo-square.svg" alt="logo"
+          ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
       </div>
 
@@ -209,37 +232,37 @@
           >
             <div class="wptb-item">
               <div class="wptb-item--image">
-                <img src="../assets/img/instagram/6.jpg" alt="img" />
+                <img src="./assets/img/instagram/6.jpg" alt="img" />
               </div>
             </div>
 
             <div class="wptb-item">
               <div class="wptb-item--image">
-                <img src="../assets/img/instagram/7.jpg" alt="img" />
+                <img src="./assets/img/instagram/7.jpg" alt="img" />
               </div>
             </div>
 
             <div class="wptb-item">
               <div class="wptb-item--image">
-                <img src="../assets/img/instagram/8.jpg" alt="img" />
+                <img src="./assets/img/instagram/8.jpg" alt="img" />
               </div>
             </div>
 
             <div class="wptb-item">
               <div class="wptb-item--image">
-                <img src="../assets/img/instagram/1.jpg" alt="img" />
+                <img src="./assets/img/instagram/1.jpg" alt="img" />
               </div>
             </div>
 
             <div class="wptb-item">
               <div class="wptb-item--image">
-                <img src="../assets/img/instagram/2.jpg" alt="img" />
+                <img src="./assets/img/instagram/2.jpg" alt="img" />
               </div>
             </div>
 
             <div class="wptb-item">
               <div class="wptb-item--image">
-                <img src="../assets/img/instagram/3.jpg" alt="img" />
+                <img src="./assets/img/instagram/3.jpg" alt="img" />
               </div>
             </div>
           </div>
@@ -306,8 +329,6 @@
 
     <!-- Main Wrapper-->
     <main class="wrapper">
-      
-
       <!-- Details Content -->
       <section class="blog-details">
         <div class="container">
@@ -339,14 +360,14 @@
               <div class="col-lg-8 col-md-8">
                 <!-- Post Image -->
                 <figure class="block-gallery mb-4">
-                  <img src="../assets/img/services/details-2.jpg" alt="img" />
+                  <img src="./assets/img/services/details-2.jpg" alt="img" />
                 </figure>
               </div>
 
               <div class="col-lg-4 col-md-4">
                 <!-- Post Image -->
                 <figure class="block-gallery mb-4">
-                  <img src="../assets/img/services/details-3.jpg" alt="img" />
+                  <img src="./assets/img/services/details-3.jpg" alt="img" />
                 </figure>
               </div>
             </div>
@@ -430,19 +451,19 @@
                   </div>
                 </div>
                 <div class="wptb-item--image">
-                  <img src="../assets/img/more/11.jpg" alt="img" />
+                  <img src="./assets/img/more/11.jpg" alt="img" />
 
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
                         <a href="index.html" class="light_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                         <a href="index.html" class="dark_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                       </div>
@@ -464,19 +485,19 @@
                   </div>
                 </div>
                 <div class="wptb-item--image">
-                  <img src="../assets/img/more/12.jpg" alt="img" />
+                  <img src="./assets/img/more/12.jpg" alt="img" />
 
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
                         <a href="index.html" class="light_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                         <a href="index.html" class="dark_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                       </div>
@@ -498,19 +519,19 @@
                   </div>
                 </div>
                 <div class="wptb-item--image">
-                  <img src="../assets/img/more/13.jpg" alt="img" />
+                  <img src="./assets/img/more/13.jpg" alt="img" />
 
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
                         <a href="index.html" class="light_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                         <a href="index.html" class="dark_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                       </div>
@@ -532,19 +553,19 @@
                   </div>
                 </div>
                 <div class="wptb-item--image">
-                  <img src="../assets/img/more/14.jpg" alt="img" />
+                  <img src="./assets/img/more/14.jpg" alt="img" />
 
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
                         <a href="index.html" class="light_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                         <a href="index.html" class="dark_logo"
                           ><img
-                            src="../assets/img/orp-logo-square.png"
+                            src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
                       </div>
@@ -579,7 +600,7 @@
                 <div class="wptb-packages2">
                   <div class="wptb-item--inner">
                     <div class="wptb-item--image">
-                      <img src="../assets/img/more/1.png" alt="" />
+                      <img src="./assets/img/more/1.png" alt="" />
                     </div>
 
                     <div class="wptb-item--holder">
@@ -687,7 +708,7 @@
                 <div class="wptb-packages2">
                   <div class="wptb-item--inner">
                     <div class="wptb-item--image order-2">
-                      <img src="../assets/img/more/3.png" alt="" />
+                      <img src="./assets/img/more/3.png" alt="" />
                     </div>
 
                     <div class="wptb-item--holder">
@@ -794,7 +815,7 @@
                 <div class="wptb-packages2">
                   <div class="wptb-item--inner">
                     <div class="wptb-item--image">
-                      <img src="../assets/img/more/2.png" alt="" />
+                      <img src="./assets/img/more/2.png" alt="" />
                     </div>
 
                     <div class="wptb-item--holder">
@@ -904,12 +925,11 @@
         </div>
       </section>
 
-
       <!-- Contact -->
       <section class="wptb-contact-form style1">
         <div class="wptb-item-layer both-version">
-          <img src="../assets/img/more/texture-2.png" alt="" />
-          <img src="../assets/img/more/texture-2-light.png" alt="" />
+          <img src="./assets/img/more/texture-2.png" alt="" />
+          <img src="./assets/img/more/texture-2-light.png" alt="" />
         </div>
         <div class="container">
           <div class="wptb-form--wrapper">
@@ -994,7 +1014,7 @@
     <!-- Footer -->
     <footer
       class="footer style1 bg-image-2"
-      style="background-image: url('../assets/img/background/bg-5_2.png')"
+      style="background-image: url('./assets/img/background/bg-5_2.png')"
     >
       <div class="footer-top">
         <div class="container">
@@ -1004,7 +1024,6 @@
                 <div class="footer-widget">
                   <div class="footer-nav">
                     <ul>
-                      
                       <li class="menu-item">
                         <a href="/event-calendar.html">Event Calendar</a>
                       </li>
@@ -1024,7 +1043,7 @@
               <div class="col-lg-6 col-md-4 mb-5 mb-md-0 order-1 order-md-0">
                 <div class="footer-widget text-center">
                   <div class="logo mr-bottom-55">
-                    <!--   <a href="index-4.html" class=""><img src="../assets/img/" alt="logo"></a> -->
+                    <!--   <a href="index-4.html" class=""><img src="./assets/img/" alt="logo"></a> -->
                   </div>
 
                   <div class="wptb-newsletter-box">
@@ -1033,26 +1052,7 @@
                         Sign up for all the latest <br />
                         news and offers
                       </h6>
-                      <form class="newsletter-form" method="post">
-                        <div class="form-group">
-                          <input
-                            type="email"
-                            name="email"
-                            class="form-control"
-                            placeholder="Enter your email"
-                            required
-                          />
-                        </div>
-                        <button type="submit" class="btn btn-two">
-                          <span class="btn-wrap">
-                            <span class="text-first">Subscribe</span>
-                            <span class="text-second"
-                              ><i class="bi bi-arrow-up-right"></i>
-                              <i class="bi bi-arrow-up-right"></i
-                            ></span>
-                          </span>
-                        </button>
-                      </form>
+                      <div class="ml-embedded" data-form="FKVuv4"></div>
                     </div>
                   </div>
                 </div>
@@ -1119,10 +1119,10 @@
     </div>
 
     <!-- Core JS -->
-    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="./assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- Framework -->
-    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
     <script src="../plugins/wow/wow.min.js"></script>
@@ -1155,6 +1155,6 @@
     <script src="../plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="../assets/js/theme.js"></script>
+    <script src="./assets/js/theme.js"></script>
   </body>
 </html>
