added new documents, updated links

--- a/src/resources.html
+++ b/src/resources.html
@@ -346,7 +346,7 @@
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Sponsor-Branded Photo Guide</a>
+                    <a href="./assets/documents/PhotoBestPractices.pdf">Sponsor-Branded Photo Guide</a>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
@@ -399,7 +399,7 @@
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Guide to Getting the Most from Race Photos</a>
+                    <a href="./assets/documents/PhotoBestPractices.pdf">Guide to Getting the Most from Race Photos</a>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
