reworking resources section, updated sitemap

--- a/src/race-day-photo-checklist.html
+++ b/src/race-day-photo-checklist.html
@@ -329,87 +329,111 @@
 
     <!-- Main Wrapper-->
     <main class="wrapper">
-      <section>
-        <!-- RD Information Downloads -->
-        <!-- ================================= -->
+      <!-- Content -->
+      <section class="wptb-element">
         <div class="container">
-          <div class="wptb-heading">
-            <div class="wptb-item--inner">
-              <h2 class="mb-5">Resources for Race Directors</h2>
-              <div class="wptb-list1">
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="race-day-photo-tips.html"
-                      >Race Photo Best Practices and Tips</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="race-day-photo-checklist.html"
-                      >Race Day Photography Checklist</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#"
-                      >Bib-Tagging & Photo Search Explainer (for
-                      Participants)</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Custom Quote Request Form (fillable PDF)</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Post-Race Media Toolkit</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#"
-                      >Content Calendar Template for Post-Race Promotions</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Post-Race Reporting Template</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Sample Media Release Waiver Language</a>
-                  </div>
-                </div>
+          <h1>Race Day Photography Checklist</h1>
+          <h2>For Race Directors Working with a Professional Photographer</h2>
 
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Event Photo Branding Kit</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Yearly Photo Coverage Planning Worksheet</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <h3>Before Race Day (Prep Checklist)</h3>
+          <ul>
+            <li>
+              Send course map and timing schedule at least 3 days before race
+              day
+            </li>
+            <li>
+              Confirm photographer access and credentials (parking, check-in,
+              vendor pass)
+            </li>
+            <li>
+              Share sponsor logo files and overlay instructions (if applicable)
+            </li>
+            <li>Designate a contact person for photography on race day</li>
+            <li>
+              Place bibs in packets using clear, visible numbers (no folds or
+              tears)
+            </li>
+            <li>
+              Encourage runners to wear bibs on the front torso, not on shorts
+              or back
+            </li>
+            <li>Provide expected finisher range and pacing info</li>
+          </ul>
+
+          <h3>Race Morning (Setup & Coordination)</h3>
+          <ul>
+            <li>
+              Ensure the finish line is clear of cones, signs, or staff blocking
+              key angles
+            </li>
+            <li>
+              Confirm that sponsor signage is visible and not obstructed by
+              fencing, crowds, or tents
+            </li>
+            <li>
+              Avoid placing speakers, coolers, or vehicles in front of branding
+              or arches
+            </li>
+            <li>
+              Set up directional signs early if 'smile zones' or banner
+              placements are included
+            </li>
+            <li>
+              Remind volunteers and emcees to avoid crowding around the finish
+              chute
+            </li>
+            <li>
+              Place hydration tables to the side—not centerline—for clean photos
+            </li>
+            <li>
+              Communicate to volunteers where the photographer will be standing
+              (to avoid blocking)
+            </li>
+          </ul>
+
+          <h3>During the Race (Live Coverage Support)</h3>
+          <ul>
+            <li>
+              Keep the designated finish area clear for photographer movement
+            </li>
+            <li>
+              Check in once mid-event to see if the photographer needs anything
+            </li>
+            <li>Alert the photographer to any timing changes or delays</li>
+            <li>
+              Ensure pacers or lead vehicles do not obstruct the view at the
+              finish
+            </li>
+            <li>
+              Maintain consistent bib visibility reminders over announcements
+              (if needed)
+            </li>
+          </ul>
+
+          <h3>After the Race (Wrap-Up)</h3>
+          <ul>
+            <li>
+              Thank runners and sponsors via announcements and direct them to
+              the photo gallery
+            </li>
+            <li>
+              Share the gallery link via post-race emails, social media, or text
+              alerts
+            </li>
+            <li>Tag photographer and sponsors when sharing highlight images</li>
+            <li>
+              Send any feedback or notes to the photographer within 48 hours
+            </li>
+            <li>
+              Request overlay download stats or social insights if part of a
+              sponsor package
+            </li>
+          </ul>
+          <a class="btn gray" href="./assets/documents/Race Day Photography Checklist.pdf">
+            <span class="btn-wrap">
+              <span class="text-first">Download Printable Version</span>
+            </span>
+          </a>
         </div>
       </section>
     </main>
@@ -516,16 +540,15 @@
         </div>
       </div>
     </footer>
-
     <div class="totop">
       <a href="#"><i class="bi bi-chevron-up"></i></a>
     </div>
 
     <!-- Core JS -->
-    <script src="./assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- Framework -->
-    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
     <script src="../plugins/wow/wow.min.js"></script>
@@ -551,10 +574,6 @@
     <script src="../plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="./assets/js/theme.js"></script>
-
-    <!-- Google Map Calling -->
-    <script src="./assets/js/map.js"></script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCUiaBC-cJ0wcEtqCUtoXF3I91o9wS42gQ"></script>
+    <script src="../assets/js/theme.js"></script>
   </body>
 </html>
