--- a/src/race-day-photo-tips.html
+++ b/src/race-day-photo-tips.html
@@ -329,87 +329,181 @@
 
     <!-- Main Wrapper-->
     <main class="wrapper">
-      <section>
-        <!-- RD Information Downloads -->
-        <!-- ================================= -->
+      <!-- Content -->
+      <section class="wptb-element">
         <div class="container">
-          <div class="wptb-heading">
-            <div class="wptb-item--inner">
-              <h2 class="mb-5">Resources for Race Directors</h2>
-              <div class="wptb-list1">
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="race-day-photo-tips.html"
-                      >Race Photo Best Practices and Tips</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="race-day-photo-checklist.html"
-                      >Race Day Photography Checklist</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#"
-                      >Bib-Tagging & Photo Search Explainer (for
-                      Participants)</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Custom Quote Request Form (fillable PDF)</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Post-Race Media Toolkit</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#"
-                      >Content Calendar Template for Post-Race Promotions</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Post-Race Reporting Template</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Sample Media Release Waiver Language</a>
-                  </div>
-                </div>
+          <h1>Photo Best Practices for Races & Sponsors</h1>
 
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Event Photo Branding Kit</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Yearly Photo Coverage Planning Worksheet</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <h2>How to Get the Best Shots on Race Day</h2>
+          <ul>
+            <li>
+              <strong>Plan Ahead</strong>
+              <ul>
+                <li>
+                  Share your course map and schedule in advance so I can plan
+                  angles and timing.
+                </li>
+                <li>
+                  Make sure key signage (finish arch, start line, mile markers)
+                  is visible and not obstructed by banners or fencing.
+                </li>
+                <li>Write a “Key Shots” list of your most wanted photos.</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Keep Key Areas Clear</strong>
+              <ul>
+                <li>
+                  Avoid staff or volunteers standing directly in front of the
+                  finish line or sponsor signage.
+                </li>
+                <li>
+                  Reserve space for the photographer near the finish—avoid
+                  placing cones, timing mats, or speakers that block a clean
+                  angle.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Smile Zones</strong>
+              <ul>
+                <li>
+                  Add signs like “Smile—you’re on camera!” near high-traffic
+                  photo zones to encourage better participant photos.
+                </li>
+              </ul>
+            </li>
+          </ul>
+
+          <h2>Bib Number Best Practices</h2>
+          <ul>
+            <li>
+              <strong>Visibility is Everything</strong>
+              <ul>
+                <li>
+                  Bibs should be worn on the front torso, fully visible (not on
+                  shorts, back, or under gear).
+                </li>
+                <li>
+                  Encourage runners to avoid folding or pinning bibs under
+                  jackets or hydration belts.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Use Bold, High-Contrast Numbers</strong>
+              <ul>
+                <li>
+                  Black numbers on white or neon backgrounds work best for AI
+                  tagging.
+                </li>
+                <li>
+                  Avoid light-colored bibs with gray numbers or thin fonts.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Consistent Placement</strong>
+              <ul>
+                <li>
+                  For group/team races, encourage consistency so everyone is
+                  tagged properly.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Use 4–5 Digit Numbers</strong>
+              <ul>
+                <li>
+                  Start bib numbers at 1000+ to help AI reliably differentiate
+                  runners.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong
+                >Differentiate Distances by Color or Starting Number</strong
+              >
+              <ul>
+                <li>
+                  Color-code bib backgrounds or borders by race type (e.g., Blue
+                  = 5K, Red = 10K, Green = Half).
+                </li>
+                <li>
+                  Use a number prefix by distance (e.g., 1000s = 5K, 2000s =
+                  10K, 3000s = Half).
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Avoid Letters in Bib Numbers</strong>
+              <ul>
+                <li>
+                  Use numeric-only bibs and avoid mixing letters and
+                  numbers—even for wave or team designations.
+                </li>
+              </ul>
+            </li>
+          </ul>
+
+          <h2>Sponsor Overlay Requirements</h2>
+          <ul>
+            <li>
+              Overlays should always be 3:2 aspect ratio for compatibility.
+            </li>
+            <li>
+              Create overlays for both landscape and portrait orientations.
+            </li>
+            <li>Use dimensions of 2880x1920px (or vice versa for portrait).</li>
+            <li>Submit PNG files with transparency.</li>
+            <li>
+              Keep logos/branding near the image perimeter (350px max from edge)
+              to avoid obscuring athletes.
+            </li>
+          </ul>
+
+          <h2>Tips for Maximizing Photo Value</h2>
+          <ul>
+            <li>
+              <strong>Social Media</strong>
+              <ul>
+                <li>
+                  Post highlight photos within 24–48 hours to keep momentum.
+                </li>
+                <li>Tag sponsors and runners when possible.</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Sponsor ROI</strong>
+              <ul>
+                <li>
+                  Use overlay stats (e.g., "X downloads with sponsor logo") in
+                  sponsor recap decks.
+                </li>
+                <li>
+                  Encourage sponsors to share the gallery link on their own
+                  channels.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Post-Race Email</strong>
+              <ul>
+                <li>
+                  Include a link to the gallery and a message like: “Thanks for
+                  racing with us—find your bib-tagged photos here!”
+                </li>
+                <li>
+                  Use branded headers or footers to reinforce sponsor exposure.
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <a class="btn gray" href="./assets/documents/PhotoBestPractices.pdf">
+            <span class="btn-wrap">
+              <span class="text-first">Download Printable Version</span>
+            </span>
+          </a>
         </div>
       </section>
     </main>
@@ -516,16 +610,15 @@
         </div>
       </div>
     </footer>
-
     <div class="totop">
       <a href="#"><i class="bi bi-chevron-up"></i></a>
     </div>
 
     <!-- Core JS -->
-    <script src="./assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- Framework -->
-    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
     <script src="../plugins/wow/wow.min.js"></script>
@@ -551,10 +644,6 @@
     <script src="../plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="./assets/js/theme.js"></script>
-
-    <!-- Google Map Calling -->
-    <script src="./assets/js/map.js"></script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCUiaBC-cJ0wcEtqCUtoXF3I91o9wS42gQ"></script>
+    <script src="../assets/js/theme.js"></script>
   </body>
 </html>
