--- a/src/services.html
+++ b/src/services.html
@@ -343,7 +343,7 @@
                   </div>
 
                   <div class="col-lg-7">
-                    <p class="wptb-item--description">
+                    <p class="wptb-item--description mb-5">
                       From 5Ks to full marathons, I offer professional
                       photography services focused on endurance events across
                       Oklahoma. Whether you're a race director looking for
@@ -351,6 +351,11 @@
                       relive race day, I capture high-quality, bib-tagged photos
                       with fast turnaround and simple delivery.
                     </p>
+                    <a class="btn gray" href="./assets/documents/ORP One Pager.pdf">
+                        <span class="btn-wrap">
+                            <span class="text-first">Download Printable Version</span>
+                        </span>
+                    </a>
                   </div>
                 </div>
               </div>
