added custom domain for gallery

--- a/src/404.html
+++ b/src/404.html
@@ -94,7 +94,7 @@
                     <a href="/">Home</a>
                   </li>
                   <li class="menu-item">
-                    <a href="https://oklahomaracephotos.smugmug.com"
+                    <a href="https://gallery.oklahomaracephotos.com"
                       >Find Your Photos</a
                     >
                   </li>
