--- a/src/contact.html
+++ b/src/contact.html
@@ -97,7 +97,7 @@
                     <a href="/">Home</a>
                   </li>
                   <li class="menu-item">
-                    <a href="https://oklahomaracephotos.smugmug.com"
+                    <a href="https://gallery.oklahomaracephotos.com"
                       >Find Your Photos</a
                     >
                   </li>
@@ -459,7 +459,7 @@
                         <a href="/event-calendar.html">Event Calendar</a>
                       </li>
                       <li class="menu-item">
-                        <a href="https://oklahomaracephotos.smugmug.com"
+                        <a href="https://gallery.oklahomaracephotos.com"
                           >Gallery</a
                         >
                       </li>
